--- a/index.html
+++ b/index.html
@@ -13,20 +13,54 @@
 		<div id="outer_div">
 			<div id="middle_div">
 				<div class="subheader_div">
-					<h2>YOUR NAME: PROJECT TITLE here</h2>
-					<img src="profile_pic.jpg" width="150">
+					<h2>Terrence D. Lewis: Presenting 101 (P101)</h2>
+					<img src="profile_pic.jpg" width="455" height="300">
 				</div>
 				<div id="inside_div"> 
 					<p>
-						Project description goes here.
+						Whether it is in an academic or professional environment, everyone will have to give a presentation at some point in their life. Often, however, nerves or lack of preparation hinders the success of a person's presentation. Flaws in a presentation can manifest as a presenter's lack of dynamism, incoherent speech or the use of filler words. Issues also brought up include problems with body fluidity and body language i.e. bad posture, improper or bad use of hand gestures and pacing. Interestingly, however, these are all key elements to any presentation that can ultimately change an audiences' view of a presenter and even decide if the presenter's points are transmitted effectively. P101 attempts to fix these things and make presentations great. 
+					</p>
+
+					<p>
+						P101 is a desktop program that attempts to prepare a public speaker by helping them train in an effective manner that yields optimal public speaking practices. It does this by separating a presentation into visual and audio components. P101 then analyzes many of the common flaws in a presentation and point them out to the presenter by using various data points and thresholds within our algorithms. This also allows P101 to offer solutions as to how speakers can correct those issues. 
+					</p>
+
+					
+						Though the use of Microsoft's Xbox Kinect and its skeletal tracking capabilities with the Natural User Interface API done in C# - visual analysis is possible. 
+						<ul>
+						<li>Problems with body fluidity and body language i.e. bad posture, improper or bad use of hand gestures and pacing are pointed out. </li>
+						</ul>
+						By leveraging TarsosDSP and CMU Sphinx Java libraries - audio analysis is possible. 
+						<ul>
+						<li>Flaws in a presentation that show themselves though a presenter's lack of dynamism, incoherent speech and the use of filler words are determined.</li>
+						</ul>
 					</p>
 					<p>
 						<strong>Bio:</strong>
-						Enter Bio Text Here
+						Terrence Lewis graduated with his B.S in Computer Science with a focus in computer security and information assurance. He is interested in numerous fields - including computer security, computer systems analysis, digital forensics and counterterrorism. He is from the great Commonwealth of Virginia and was raised in the Hampton Roads area. His main hobby is photography and some of his work can be found at <a href="http://tlpho.portfoliobox.me"> Terrence Lewis Photography &copy;</a>.
 					</p>
 					<p>
 						<strong>Documentation:</strong> 							
 						<ul>
+							<a heref="https://github.com/gw-sd-2016/Presenting101/blob/gh-pages/Terrence_Lewis_SD_Proposal.doc">NSF Proposal</a>
+						</ul>
+						<ul>
+							<a href="https://github.com/gw-sd-2016/Presenting101/blob/gh-pages/Terrence_Lewis_SD_Revision.doc">NSF Proposal Revision</a>
+						</ul>
+						<ul>
+							<a href="https://github.com/gw-sd-2016/Presenting101/blob/gh-pages/Terrence_Lewis_FunctionalSpec.doc">Functional Spec</a>
+						</ul>
+						<ul>
+							<a href="https://github.com/gw-sd-2016/Presenting101/blob/gh-pages/Terrence_Lewis_BusinessPro.docx">Business plan and social impact</a>
+						</ul>
+						<ul>
+							<a href="https://github.com/gw-sd-2016/Presenting101/blob/gh-pages/Design_Document.docxDesign"> Doc 1 - users and use cases</a>
+						</ul>
+						<ul>
+							<a href="https://github.com/gw-sd-2016/Presenting101/blob/gh-pages/Terrence_Lewis_Component_Interfaces.pdf">Design Doc 2 - components and interfaces</a>
+						</ul>
+						<ul>
+							<a href="https://github.com/gw-sd-2016/Presenting101/blob/gh-pages/Presentation5.2.pptx">Final presentation slides</a>
 						</ul>
 					</p>
 				</div>
