update to website

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					<p>
 						<strong>Documentation:</strong> 							
 						<ul>
-							<a heref="https://github.com/gw-sd-2016/Presenting101/blob/gh-pages/Terrence_Lewis_SD_Proposal.doc">NSF Proposal</a>
+							<a href="https://github.com/gw-sd-2016/Presenting101/blob/gh-pages/Terrence_Lewis_SD_Proposal.doc">NSF Proposal</a>
 						</ul>
 						<ul>
 							<a href="https://github.com/gw-sd-2016/Presenting101/blob/gh-pages/Terrence_Lewis_SD_Revision.doc">NSF Proposal Revision</a>
@@ -62,6 +62,14 @@
 						<ul>
 							<a href="https://github.com/gw-sd-2016/Presenting101/blob/gh-pages/Presentation5.2.pptx">Final presentation slides</a>
 						</ul>
+					</p>
+
+					<p>
+						<html>
+ 							<body>
+ 								<iframe src="https://youtu.be/18ufo3FGuyY" width="560" height="315" frameborder="0" allowfullscreen></iframe>
+ 							</body>
+						</html>
 					</p>
 				</div>
 			</div>
